# zk-authorship-license

./: LICENSE  Project Directory Tree  README.md  Updated_README.md  convert_script.js  mojo_circuit_prover  package.json  stdin.json  stdout.json  the_tool_must  update.md
mojo_prover/: stdin.json  stdout.json
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  ollama.rs  zig-mojo.rs
src-tauri/src/commands/: license.rs  mod.rs  prove.rs  register.rs
src/components/: AuthorDashboard.tsx  LicenseIssuer.tsx  LicenseVerifier.tsx
